# nsfw-mini-games

./: .gitignore  CMakeLists.txt  README.md
include/: terminal.h
include/managers/: font-manager.h
include/utilities/: color.h  helper.h
include/wheel/: spin-wheel.h  wheel-editor.h
src/: main.cpp  shell.html  terminal.cpp
src/utilities/: color.cpp
src/wheel/: spin-wheel.cpp  wheel-editor.cpp
